test/configCases/validate/multi-errors/errors.js
"use strict";

module.exports = [[/Validation failed in compiler1/]];
