test/configCases/errors/case-emit/errors.js
module.exports = [[/only differs in casing/, /a\.js/, /A\.js/]];
